harrix-efremova dictionary added

--- a/CrossWordPainter/CrossWordPainter.csproj
+++ b/CrossWordPainter/CrossWordPainter.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Caliburn.Micro" Version="4.0.212" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CrossWordFiller\CrossWordFiller.csproj" />
+  </ItemGroup>
+
 </Project>
